# ECG-Recommender-MLops

./: .env.docker  .env.example  .env.test  .gitignore  README.md  conftest.py  mlflow.db  pyproject.toml
.dvc/: config
.github/workflows/: cd-staging.yml  ci.yml
airflow/: requirements.txt
airflow/dags/: bias_monitoring_dag.py  drift_monitoring_dag.py
data/: .gitignore  ptb-xl.dvc
docker/: .dockerignore  Dockerfile.api  docker-compose.airflow.yml  docker-compose.yml
docs/: architecture-diagram.md  comparison_summary.txt  comparison_table.csv
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  mlflow.yaml  namespace.yaml  postgres.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/overlays/prod/: deployment-patch.yaml  kustomization.yaml  service-patch.yaml
k8s/overlays/staging/: deployment-patch.yaml  kustomization.yaml
models/: best_model.pth
notebooks/: 02_train_baseline.ipynb  02_train_baseline.py
scripts/: check_predictions.py  compare_architectures.py  create_ensemble.py  deploy-minikube.sh  evaluate_baseline_perclas.py  evaluate_calibration.py  init_db.py  model_comparison_analysis.py  monitor_bias.py  monitor_drift.py  register_model.py  test_api.py  test_explainability.py  test_inference.py  train.py  train_focal_loss.py  train_v2.py
src/api/: config.py  main.py
src/api/routes/: bias.py  drift.py  health.py  predict.py
src/ml/explainability/: explainer.py  ollama_explainer.py
src/ml/inference/: action_mapping.json  predictor.py
src/ml/models/: resnet1d.py
src/ml/preprocessing/: signal.py
src/monitoring/: bias_analyzer.py  drift_detector.py
tests/unit/: test_api.py  test_preprocessing.py
